[tool.poetry]
name = "dating-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
insightface = "^0.7.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
onnxruntime-gpu = "^1.19"
aiosqlite = "^0.20.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
